Bug 409974: Addresses in autocomplete list hard to read or invisible with non-default system themes, patch by Dão Gottwald <daomozilla.com>, r=me, a=beltzner
UltraBlame original commit: f3a8d8f3f187469ee4533c81407b0c08ea36562c

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -9936,6 +9936,32 @@ text
 {
 color
 :
+GrayText
+;
+}
+.
+ac
+-
+url
+-
+text
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+default
+-
+theme
+)
+{
+color
+:
 #
 336633
 ;
